tests/fail/match_or_mixed_kinds.msh
# Should fail: OR pattern alternatives must all be the same literal kind
"auto" match
    'auto' 0 : "default" wl,
    _        : "other" wl,
end
